# committable

./: .gitignore  Cargo.toml  README.md  flake.nix
committable-lib/: Cargo.toml
committable-lib/src/: commit.rs  lib.rs  rules.rs
committable-lib/src/rules/: body_length.rs  header_length.rs  non_empty_body.rs  non_empty_header.rs  single_empty_line_before_body.rs
src/: main.rs
