[package]
name = "committable"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "committable-lib"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
committable-lib = {path="./committable-lib"}
miette = { version = "7.1.0", features = ["fancy"] }

